# MAMMAL_core

./: .gitignore  CMakeLists.txt  LICENSE  MAMMAL_core.sln  README.md  animal_calib.sln
GMM/: GMM.vcxproj  GMM.vcxproj.filters  gmm.cpp  gmm.h  gmmsolver.cpp  gmmsolver.h  main.cpp
VAE/: VAE.vcxproj  VAE.vcxproj.filters  decoder.cpp  decoder.h  layers.cpp  layers.h  main.cpp  unittest.cpp  unittest.h
animal_calib/: animal_calib.props  animal_calib.vcxproj  animal_calib.vcxproj.filters  nanorenderer.props  pig_shape.txt  run_inspect.cpp  shapestate.txt
annotator/: ArcballCanvas.cpp  NanoRenderer.cpp  NanoRenderer.h  RenderObject.h  anno_config.json  anno_utils.cpp  anno_utils.h  annotator.cpp  annotator.h  annotator.vcxproj  annotator.vcxproj.filters  main.cpp  main.h  multiview_annotator.cpp  shader_file.cpp  state_annotator.cpp  state_annotator.h  test_nano.cpp
articulation/: PIG_model.json  _config.json  articulation.vcxproj  articulation.vcxproj.filters  artist_config.json  artist_config_sym.json  common.h  gpuutils.cu  gpuutils.h  main.cpp  pigmodel.cpp  pigmodel.h  pigmodel_config.json  pigmodeldevice.cpp  pigmodeldevice.cu  pigmodeldevice.h  pigsolver.cpp  pigsolver.h  pigsolver_fitting.cpp  pigsolver_jacobi.cpp  pigsolver_shape.cpp  pigsolver_sil.cpp  pigsolverdevice.cpp  pigsolverdevice.cu  pigsolverdevice.h  pigsolverdevice_debug.cpp  show_gpu_param.cpp  smal2_config.json  smal_config.json  test_collsion_render.cpp  test_compare_cpugpu.cpp  test_fitting_model.cpp  test_gpu.cpp  test_inmeshtest.cpp  test_main.h  test_pointer.cpp  test_regressor.cpp  test_render_behavior.cpp  test_render_model.cpp  test_render_video.cpp  (+3 more)
associate/: Hungarian.cpp  Hungarian.h  _old_config.json  associator.h  camera.cpp  camera.h  clusterclique.cpp  clusterclique.h  config.json  convertJsonToObj.py  framedata.cpp  framedata.h  framedata_PMT.cpp  framedata_parsing.cpp  framedata_proposals.cpp  framedata_shape.cpp  gen_colormap.py  geometry.cpp  geometry.h  image_utils.cpp  image_utils.h  main.cpp  matching.cpp  matching.h  math_utils.cpp  math_utils.h  parsing.cpp  parsing.h  skel.cpp  skel.h  tracking.cpp  tracking.h  tracklet.h  trajectory.h
bundle/: BASolver.cpp  BASolver.h  annotator.cpp  annotator.h  calibration.cpp  calibration.h  main.cpp
calibration/: BASolver.cpp  BASolver.h  annotator.cpp  calibration.cpp  calibration.h  calibration.vcxproj  calibration.vcxproj.filters  calibration2.cpp  calibration2.h  main.cpp
calibration2/: BASolver.cpp  BASolver.h  calibration2.cpp  calibration2.h  calibration2.vcxproj  calibration2.vcxproj.filters  main.cpp
configs/: config_20190703_feed1-resume.json  config_20190703_feed1.json  config_20190703_motion.json  config_20190703_motion2.json  config_20190703_motion2_new.json  config_20190703_motion3.json  config_20190703_motion3_new.json  config_20190703_motion4.json  config_20190703_motion5.json  config_20190703_motion_new.json  config_20190704_feed1.json  config_20190704_fordemo.json  config_20190704_foreval-seq.json  config_20190704_foreval.json  config_20190704_foreval2-3views(0,5,7).json  config_20190704_foreval2-3views(0,5,8).json  config_20190704_foreval2-3views(0,5,9).json  config_20190704_foreval2-3views(5,7,8).json  config_20190704_foreval2-3views(5,7,9).json  config_20190704_foreval2-3views(5,8,9).json  config_20190704_foreval2-5views.json  config_20190704_foreval2.json  config_20190704_foreval_3views.json  config_20190704_foreval_5views.json  config_20190704_foreval_no_anchor.json  config_20190704_foreval_no_reassoc.json  config_20190704_foreval_no_sil.json  config_20190704_foreval_tri.json  config_20190704_foreval_tri_3views.json  config_20190704_foreval_tri_5views.json  config_20190704_gt.json  config_20190705_feed.json  config_20190705_feed10.json  config_20190823_feed.json  config_20190823_motion.json  config_20190824_motion.json  config_20190824_motion2.json  config_20190825_feed.json  config_20190920_feed.json  config_20190920_motion.json  (+46 more)
distance_transform/: distance_transform.vcxproj  distance_transform.vcxproj.filters  distance_transform2.cu  distance_transform_cuda.cu  distance_transform_cuda.h  main.cpp
docs/: Demo.md  INSTALL.md
exec/: Source.cpp  annotate.cpp  associate.cpp  calib_bundle.cpp  compute_sym.cpp  custom_pig.cpp  main.cpp  main.h  modify_model.cpp  render.cpp  run_pose.cpp  run_pose_render.cpp  run_render.cpp  run_render2.cpp  run_shape.cpp  smal_fitting.cpp  test.cpp  test_render.cpp  testfunc.cpp  visualize_seq.cpp  write_video.cpp
gait/: gait.vcxproj  gait.vcxproj.filters  main.cpp
lib_logs/: boost.md  ceres.md  glad.md  opencv.md  python36.md  qt.md
nano_renderer/: nano_renderer.vcxproj
nanorender/: NanoRenderer.cpp  NanoRenderer.h  RenderObject.cpp  RenderObject.h  main.cpp  nanorender.vcxproj  nanorender.vcxproj.filters  shader_file.cpp  shader_file.h
nm_eval/: exp1.cpp  exp1.h  main.cpp  main.h  nm_eval.vcxproj  nm_eval.vcxproj.filters  run_eval_sil.cpp
posesolver/: MAMMAL_main.cpp  annotate.cpp  compute_sym.cpp  config.json  config_7.json  config_seq2.json  confignew.json  for_nm.cpp  framedata.cpp  framedata.h  framesolver.cpp  framesolver.h  framesolver_eval.cpp  framesolver_pipeline.cpp  global_config.cpp  global_config.h  main.cpp  main.h  matching.cpp  matching.h  posesolver.vcxproj  posesolver.vcxproj.filters  run_demo.cpp  run_demo_result.cpp  run_eval_seq.cpp  run_eval_sil.cpp  run_inspect.cpp  run_pose.cpp  run_pose_render.cpp  run_pose_smooth.cpp  run_shape.cpp  scenedata.cpp  scenedata.h  tracking.cpp  tracking.h  visualize_seq.cpp  write_video.cpp
props/: OpenCV4.1.props  boost1.65.props  boost1.79.0.props  ceres.props  eigen.props  gl-pcl.props  json.props  nanorenderer.props  opencv450.props
python/: analyze_seq.py  blend_render.py  calib.py  compute_bg.py  extract_a_cam_video.py  gen_colormap.py  read_xml.py  test_chamfer.py  test_flow.py  transfer_data.py  undistortion.py
render/: camviewer.cpp  camviewer.h  cuda_utils_render.cu  cuda_utils_render.h  eigen_util.h  glad.c  main.cpp  render.vcxproj  render.vcxproj.filters  render_object.cpp  render_object.h  (+10 more)
(+119 files in other folders)
